test/spec_vectors/i32/fail/module_48.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-binary-2nd-operand-empty-in-global.set (global.set $x (i32.const 0) (i32.add)) (global.get $x) (drop)))